k8s-templates/configmap-env.yml
apiVersion: v1
kind: ConfigMap # configmap are used as env variables[stable value] and volumemounts[dynamic value]
metadata:
  name: my-configmap
data:
  db-port: "3306"

####################

### DEPLOYMENT.YML ###

deployment.ymlapiVersion: apps/v1
kind: Deployment
metadata:
  name: my-deploy # pod-deploy name
  #namespace: vicky
  labels:
    env: test-deploy # desired label for deployment
spec:
  replicas: 2
  selector:
    matchLabels: # replica label
      env: test # replica label == pod label
  template: # selector matchLabels must be a match [same] as labels
    metadata:
      name: nginx-pod
      labels: # pod label
        env: test # pod label == replica label
    spec:
      containers:
      - name: nginx-con
        image: nginx
        env: # once declared as env, values under env are stable cant be changed in container. to overcome volumeMounts are used.
        - name: DB-PORT # env metadata
          valueFrom:
            configMapKeyRef:
              name: my-configmap # configmap metadata name
              key: db-port # data child as key
        ports:
        - containerPort: 80
