k8s-templates/pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: pod-httpd
  #namespace: vicky
  labels:
    env: test
spec:
  containers:
  - name: httpd-con
    image: httpd
    ports:
    - containerPort: 80
