k8s-templates/clusterip.yml
apiVersion: v1
kind: Service
metadata:
  name: mysvc
spec:
  type: ClusterIP
  ports:
  - targetPort: 80 # pod port, for convenience, the `targetPort` is set to the same value as the `port` field.
    port: 80 # clusterIP port
  selector:
    env: test
