k8s-templates/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
spec:
  ingressClassName: example # ingress will watch for class name provided
  rules:
  - host: "example.com" # domain name eg:- amazon.com
    http:
      paths:
      - pathType: Prefix
        path: "/bar"
        backend:
          service:
            name: mysvc # which service ingress route to
            port:
              number: 80
